<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wood" >

    <Button
        android:id="@+id/actionbar_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back_selector"
        android:text="@string/back"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/actionbar_txt_titre"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/actionbar_logo"
        android:layout_toRightOf="@+id/actionbar_btn_back"
        android:gravity="center"
        android:text="@string/default_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/actionbar_logo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="2dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_crayon" />

</RelativeLayout>