<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_backgroung"
    android:orientation="horizontal"
    android:weightSum="3" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3" >

            <ImageView
                android:id="@+id/avatar_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_description" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/prenom_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_firstname"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/nom_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/profile_name"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/classe_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_class"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/pourcentage_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/percent_success"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginLeft="10dp" />

            <ListView
                android:id="@+id/profil_list_stats"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1" />


        </LinearLayout>

        <Button
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/deconnection"
            android:id="@+id/deco"
            android:onClick="backInHomePage"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selector"
            android:textSize="25sp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/categorie_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical" />

</LinearLayout>